# soragochi

./: .gitignore  Cargo.toml  soragochi.py
src/: main.rs
static/: index.html  soragochi.js  style.css
